--- a/index.html
+++ b/index.html
@@ -8,75 +8,72 @@
     <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
-    <div class="main-container">
-      <div class="container">
-        <h1>
-          Let's start <span class="accent">getting a little</span> more fancy
-        </h1>
-        <img src="./elephants.jpg" alt="a picture of elephants" />
-      </div>
-      <div class="container">
-        <div class="columns">
-          <div class="col">
-            <h2>Dolor Sit</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eius
-              nulla perferendis, illum incidunt quo ut repudiandae? Harum,
-              blanditiis molestiae magnam laborum mollitia eum error, fuga
-              recusandae nemo numquam voluptates aut velit nisi perferendis
-              perspiciatis. Odit nobis consectetur suscipit. Corrupti ullam
-              numquam porro doloribus nobis praesentium, molestias nihil
-              sapiente enim.
-            </p>
-          </div>
-          <div class="col">
-            <h2>Consectetur adipisicing</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-              libero nisi eveniet corporis molestiae aspernatur beatae rem
-              omnis. Molestiae nostrum doloremque quae sapiente molestias
-              inventore placeat consequuntur corrupti officia autem! Labore
-              ratione doloremque nulla laboriosam temporibus impedit nihil
-              dolore voluptates sapiente dolores, blanditiis perspiciatis odio
-              culpa, quasi ipsa eum placeat.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Excepturi, aperiam. Voluptas voluptate exercitationem in
-              consequuntur.
-            </p>
-          </div>
-          <div class="col text">
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum
-              exercitationem nam expedita veniam ipsa sequi dignissimos nostrum
-              quam minus officiis aut at dolorem, deserunt illo sit debitis
-              aliquid recusandae vero! Beatae atque blanditiis ducimus. Tenetur
-              dolores expedita cumque ut tempore harum, blanditiis amet quisquam
-              beatae, consequatur repellendus aliquid doloribus assumenda!
-            </p>
-          </div>
+    <div class="container">
+      <h1>
+        Let's start <span class="accent">getting a little</span> more fancy
+      </h1>
+      <img src="./elephants.jpg" alt="a picture of elephants" />
+    </div>
+    <div class="container">
+      <div class="columns">
+        <div class="col">
+          <h2>Dolor Sit</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eius
+            nulla perferendis, illum incidunt quo ut repudiandae? Harum,
+            blanditiis molestiae magnam laborum mollitia eum error, fuga
+            recusandae nemo numquam voluptates aut velit nisi perferendis
+            perspiciatis. Odit nobis consectetur suscipit. Corrupti ullam
+            numquam porro doloribus nobis praesentium, molestias nihil sapiente
+            enim.
+          </p>
         </div>
-        <div class="columns">
-          <div class="col">
-            <h2>Deserunt mollit anim id est laborum</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, a
-              blanditiis quidem perspiciatis fugiat magni deleniti repellendus
-              doloribus beatae nam delectus pariatur et repellat alias eius
-              natus eligendi debitis dolor iure soluta distinctio! Quas, optio
-              aperiam dolorum laborum eaque illo itaque obcaecati placeat unde
-              architecto, odio cum officiis nemo minima!
-            </p>
-          </div>
-          <div class="col text">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
-              esse adipisci suscipit inventore alias et dolore expedita, fugit
-              distinctio eos voluptatibus delectus repellendus cupiditate
-              molestias aut quae odio id aspernatur.
-            </p>
-          </div>
+        <div class="col">
+          <h2>Consectetur adipisicing</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+            libero nisi eveniet corporis molestiae aspernatur beatae rem omnis.
+            Molestiae nostrum doloremque quae sapiente molestias inventore
+            placeat consequuntur corrupti officia autem! Labore ratione
+            doloremque nulla laboriosam temporibus impedit nihil dolore
+            voluptates sapiente dolores, blanditiis perspiciatis odio culpa,
+            quasi ipsa eum placeat.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi,
+            aperiam. Voluptas voluptate exercitationem in consequuntur.
+          </p>
+        </div>
+        <div class="col text">
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum
+            exercitationem nam expedita veniam ipsa sequi dignissimos nostrum
+            quam minus officiis aut at dolorem, deserunt illo sit debitis
+            aliquid recusandae vero! Beatae atque blanditiis ducimus. Tenetur
+            dolores expedita cumque ut tempore harum, blanditiis amet quisquam
+            beatae, consequatur repellendus aliquid doloribus assumenda!
+          </p>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="col">
+          <h2>Deserunt mollit anim id est laborum</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, a
+            blanditiis quidem perspiciatis fugiat magni deleniti repellendus
+            doloribus beatae nam delectus pariatur et repellat alias eius natus
+            eligendi debitis dolor iure soluta distinctio! Quas, optio aperiam
+            dolorum laborum eaque illo itaque obcaecati placeat unde architecto,
+            odio cum officiis nemo minima!
+          </p>
+        </div>
+        <div class="col text">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+            esse adipisci suscipit inventore alias et dolore expedita, fugit
+            distinctio eos voluptatibus delectus repellendus cupiditate
+            molestias aut quae odio id aspernatur.
+          </p>
         </div>
       </div>
     </div>
