Resized the flexbox columns with their respective % of the width

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="container">
       <div class="columns">
-        <div class="col">
+        <div class="col col-1">
           <h2>Dolor Sit</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eius
@@ -28,7 +28,7 @@
             enim.
           </p>
         </div>
-        <div class="col">
+        <div class="col col-2">
           <h2>Consectetur adipisicing</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
@@ -44,7 +44,7 @@
             aperiam. Voluptas voluptate exercitationem in consequuntur.
           </p>
         </div>
-        <div class="col text">
+        <div class="col col-1 text">
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum
             exercitationem nam expedita veniam ipsa sequi dignissimos nostrum
@@ -56,7 +56,7 @@
         </div>
       </div>
       <div class="columns">
-        <div class="col">
+        <div class="col col-3">
           <h2>Deserunt mollit anim id est laborum</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, a
@@ -67,7 +67,7 @@
             odio cum officiis nemo minima!
           </p>
         </div>
-        <div class="col text">
+        <div class="col col-1 text">
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
             esse adipisci suscipit inventore alias et dolore expedita, fugit
